# callstackpp

./: .travis.yml  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  conanfile.py
include/: callstackpp.hpp
include/backward/: backward.hpp
include/callstackpp/: backward.hpp  callstack.hpp  version.hpp
scripts/: clang-tidy.sh
src/: callstack.cpp  callstackpp.cpp
test/: test.cpp
